fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -689,8 +689,15 @@ body {
 }
 
 .contact-icon {
-	font-size: 1.5rem;
-	margin-right: 0.5em;
+	font-size: 0.5rem;
+	margin-right: 0.1em;
+}
+
+@media (min-width: 400px) {
+	.contact-icon {
+		font-size: 1.5rem;
+		margin-right: 0.5em;
+	}
 }
 
 .head-contact-label {
